# TinyECS

./: CMakeLists.txt  README.md  Run.bat
include/: World.h
include/ECS/: CompContainer.h  EntityMngr.h  SystemMngr.h  Types.h
src/: Main.cpp  World.cpp
src/ECS/: EntityMngr.cpp  SystemMngr.cpp
